# rust-react-native

./: .gitignore  App.tsx  README.md  app.json  build.sh  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/mariusud/exporustdemo/: MainActivity.kt  MainApplication.kt
headers/: module.modulemap
ios/: Podfile
ios-rust-headers/: native_rust_lib.h
ios/exporustdemo/: Info.plist
ios/exporustdemo.xcodeproj/: project.pbxproj
modules/rust-module/: expo-module.config.json  index.ts
modules/rust-module/android/: build.gradle
modules/rust-module/android/src/main/java/expo/modules/rustmodule/: RustModule.kt  RustModuleView.kt
modules/rust-module/android/src/main/java/uniffi/native_rust_lib/: native_rust_lib.kt
modules/rust-module/ios/: RustModule.podspec  RustModule.swift  RustModuleView.swift
modules/rust-module/ios/native_rust_lib.xcframework/: Info.plist
modules/rust-module/ios/native_rust_lib.xcframework/ios-arm64-simulator/Headers/: native_rust_libFFI.h
modules/rust-module/ios/src/: RustModule.swift
modules/rust-module/ios/swift/: native_rust_lib.swift
modules/rust-module/ios/swift/Modules/: native_rust_lib.modulemap
modules/rust-module/src/: RustModule.ts  RustModule.types.ts  RustModule.web.ts  RustModuleView.tsx  RustModuleView.web.tsx
native_rust_lib/: Cargo.toml  build-android.rs  build-ios.rs
native_rust_lib/native_rust_lib/: Cargo.toml
native_rust_lib/native_rust_lib.xcframework/ios-arm64-simulator/Headers/: native_rust_libFFI.h
native_rust_lib/src/: lib.rs
