[package]
name = "native_rust_lib"

[lib]
crate-type = ["staticlib", "cdylib"]
name  = "native_rust_lib"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size.
# panic = 'abort'     # Abort on panic
debug = true # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.

[dependencies]
jni = "0.21.1"
uniffi = { version = "0.29.4", features = ["cli"] }
walkdir = "2.5"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.4", features = ["bindgen-tests"] }

[features]
ffi-trace = ["uniffi/ffi-trace"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"

[[bin]]
name = "build-ios"
path = "build-ios.rs"

[[bin]]
name = "build-android"
path = "build-android.rs"
